LTLResultsViewer scrollbar is fixed

--- a/src/bma.package/css/LTLStates.less
+++ b/src/bma.package/css/LTLStates.less
@@ -352,11 +352,6 @@
             max-height: 322px;
             overflow-x:auto;
 
-            &:after {
-                content:"";
-                height:18px;
-                display:block;
-            }
 
             .bma-simulation-data-table {
                 max-width: calc(~"100% - 90px");
